<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Timelapse Helper</string>
    <string name="about">About this app...</string>
    <string name="version_title">Version</string>
    <string name="about_version">1.0.0 (1)</string>
    <string name="action_settings">Settings</string>
    <string name="press_me">Press me!</string>
    <string name="edit_message">Edit me</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_share">Share</string>
    <string name="ok">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_message">Are you sure you want to reset to your default settings?</string>
    <string name="dialog_title">Reset?</string>
    <string name="shooting_picker">Shooting</string>
    <string name="playback_picker">Playback</string>
    <string name="interval">Interval</string>
    <string name="shots">Shots</string>
    <string name="fps">FPS</string>
    <string name="shootingDays">Days</string>
    <string name="shootingHours">Hrs</string>
    <string name="shootingMinutes">Mins</string>
    <string name="shootingSeconds">Secs</string>
    <string name="playbackHours">Hrs</string>
    <string name="playbackMinutes">Mins</string>
    <string name="playbackSeconds">Secs</string>
    <string name="playbackFrames">Frms</string>
    <string name="interval_centric_switch">Interval centric calculations?</string>
    <string name="preferences_category_title">Default settings</string>

</resources>
