<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/preferences_category_title"
        android:key="pref_key_storage_settings">
        <SwitchPreference
            android:key="interval_centric"
            android:title="@string/interval_centric_switch"
            android:defaultValue="false" />
        <EditTextPreference
            android:key="interval_field"
            android:title="@string/interval"
            android:defaultValue="16"
            android:inputType="number"/>
        <EditTextPreference
            android:key="shots_field"
            android:title="@string/shots"
            android:defaultValue="3600"
            android:inputType="number"/>
        <EditTextPreference
            android:key="fps_field"
            android:title="@string/fps"
            android:defaultValue="30"
            android:inputType="number"/>
    </PreferenceCategory>
</PreferenceScreen>